modified overflow to check if it the background stops clipping on mobile

--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -12,6 +12,8 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 120vh;
+    overflow: auto;
+
 }
 
 .button {
